--- a/client/src/styles/config.scss
+++ b/client/src/styles/config.scss
@@ -1,4 +1,5 @@
 $ff: sans-serif;
+$container-width: 450px;
 
 *{
   margin: 0;
@@ -18,4 +19,8 @@ $ff: sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+ul{
+  list-style: none;
 }
