--- a/client/src/styles/total.scss
+++ b/client/src/styles/total.scss
@@ -1,7 +1,7 @@
 @import "./config.scss";
 
 .total{
-  background-color: #babec9;
+  background-color: $grey;
   font-size: large;
   font-weight: bold;
   padding: 1rem 0;
